smartforests/scss/utils.scss
.overflow-y-auto {
  overflow-y: auto;
}

.center-screen {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.flex-height-0 {
  flex-basis: 0;
  min-height: 0;
}

.flex-width-0 {
  flex-basis: 0;
  min-width: 0;
}

.min-w-readable {
  min-width: 20em;
}

.full-bleed {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

.link-reset {
  text-decoration: unset;
  color: unset;
}

.overlay {
  background-color: rgba($color: #000000, $alpha: 0.5);
}

.caption {
  @extend .microcopy;
  @extend .small;
  @extend .text-uppercase;
}

.opacity-8 {
  opacity: 0.8 !important;
}

.h-48px {
  height: 48px !important;
}

.links-white {
  a {
    @extend .text-white;
  }
}

.child-mb-0 > *:last-child {
  margin-bottom: 0;
}

.hero-img {
  height: 400px;

  @include media-breakpoint-up(md) {
    width: 100%;
    height: 500px;
    object-fit: cover;
  }
}

.font-serif {
  font-family: $font-family-serif !important;
}

.bg-faded-yellow {
  background-color: rgba($yellow, 0.8);
}

.navbar-brand {
  font-size: $font-size-root;
}

.text-black {
  color: $black !important;
}

.max-content {
  width: max-content !important;
}

.drop-shadow-mid-green-glow {
  filter: drop-shadow(0px -4px 15px rgba($mid-green, 0.3));
}

.input-group-focus {
  &:focus-within {
    border-color: $input-focus-border-color;
    box-shadow: $input-focus-box-shadow;
  }

  input:focus {
    box-shadow: $input-box-shadow;
    border-color: $input-border-color;
  }
}

.elevated {
  box-shadow: 0px 0px 20px rgba(2, 99, 2, 0.2);
  border-radius: 3px;
}

.w-popover {
  width: 340px;
}

.hoverable {
  &:hover,
  &:focus {
    background-color: transparentize($color: $dark-green, $amount: 0.9);
  }
}

.fade-inout {
  transition: opacity 0.25s ease-in-out;

  &.hidden {
    opacity: 0;
    visibility: hidden;
  }
}

